--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -106,17 +106,74 @@ When running in Proxy Mode, KoreShield sits transparently between your applicati
 
 ## Next Steps
 
-<Cards>
-  <Card title="Installation" href="/docs/installation">
-    Get up and running with KoreShield in minutes.
-  </Card>
-  <Card title="Quick Start" href="/docs/getting-started">
-    Learn how to secure your first LLM integration.
-  </Card>
-  <Card title="Configuration" href="/docs/configuration">
-    Configure security policies and provider settings.
-  </Card>
-  <Card title="API Reference" href="/docs/api-reference">
-    Explore the complete KoreShield API.
-  </Card>
-</Cards>
+<div className="row">
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>📦 Installation</h3>
+      </div>
+      <div className="card__body">
+        <p>Get up and running with KoreShield in minutes.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/getting-started/installation"
+          className="button button--primary button--block"
+        >
+          Get Started
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>⚡ Quick Start</h3>
+      </div>
+      <div className="card__body">
+        <p>Learn how to secure your first LLM integration.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/getting-started/quick-start"
+          className="button button--primary button--block"
+        >
+          Learn More
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>⚙️ Configuration</h3>
+      </div>
+      <div className="card__body">
+        <p>Configure security policies and provider settings.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/configuration/"
+          className="button button--primary button--block"
+        >
+          Configure
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>📚 API Reference</h3>
+      </div>
+      <div className="card__body">
+        <p>Explore the complete KoreShield API.</p>
+      </div>
+      <div className="card__footer">
+        <a href="/api/" className="button button--primary button--block">
+          View API
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
