--- a/docs/resources/index.mdx
+++ b/docs/resources/index.mdx
@@ -9,6 +9,7 @@ KoreShield is an open-source security platform designed to protect enterprise ap
 ## Why KoreShield?
 
 Prompt injection attacks pose a critical security risk for LLM-integrated systems. Attackers can:
+
 - Override system instructions
 - Extract sensitive data
 - Bypass security controls
@@ -37,11 +38,13 @@ KoreShield supports multiple LLM providers through its proxy architecture:
 ### Quick Install
 
 **Python SDK:**
+
 ```bash
 pip install koreshield
 ```
 
 **JavaScript/TypeScript SDK:**
+
 ```bash
 npm install koreshield
 ```
@@ -51,6 +54,7 @@ npm install koreshield
 KoreShield offers flexible deployment options:
 
 ### 1. Proxy Mode (Recommended)
+
 Deploy KoreShield as a standalone security proxy service. Your application sends LLM requests to KoreShield, which validates them before forwarding to your provider. This offers the best security isolation and works with any programming language.
 
 ```bash
@@ -64,6 +68,7 @@ railway up
 ```
 
 ### 2. SDK Mode
+
 Use the `koreshield` Python or JavaScript SDK to communicate with your KoreShield proxy or integrate security features directly into your application.
 
 ```python
@@ -100,17 +105,74 @@ When running in Proxy Mode, KoreShield sits transparently between your applicati
 
 ## Next Steps
 
-<Cards>
-  <Card title="Installation" href="/docs/installation">
-    Get up and running with KoreShield in minutes.
-  </Card>
-  <Card title="Quick Start" href="/docs/getting-started">
-    Learn how to secure your first LLM integration.
-  </Card>
-  <Card title="Configuration" href="/docs/configuration">
-    Configure security policies and provider settings.
-  </Card>
-  <Card title="API Reference" href="/docs/api-reference">
-    Explore the complete KoreShield API.
-  </Card>
-</Cards>
+<div className="row">
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>📦 Installation</h3>
+      </div>
+      <div className="card__body">
+        <p>Get up and running with KoreShield in minutes.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/getting-started/installation"
+          className="button button--primary button--block"
+        >
+          Get Started
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>⚡ Quick Start</h3>
+      </div>
+      <div className="card__body">
+        <p>Learn how to secure your first LLM integration.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/getting-started/quick-start"
+          className="button button--primary button--block"
+        >
+          Learn More
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>⚙️ Configuration</h3>
+      </div>
+      <div className="card__body">
+        <p>Configure security policies and provider settings.</p>
+      </div>
+      <div className="card__footer">
+        <a
+          href="/configuration/"
+          className="button button--primary button--block"
+        >
+          Configure
+        </a>
+      </div>
+    </div>
+  </div>
+  <div className="col col--6" style={{ marginBottom: "1rem" }}>
+    <div className="card">
+      <div className="card__header">
+        <h3>📚 API Reference</h3>
+      </div>
+      <div className="card__body">
+        <p>Explore the complete KoreShield API.</p>
+      </div>
+      <div className="card__footer">
+        <a href="/api/" className="button button--primary button--block">
+          View API
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
